--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,7 @@
-<h1>Eat-Da-Buger!</h1>
 
 <img class='burger-img' src="/assets/img/burger.jpg" alt="" srcset="">
+
+<h1>Eat-Da-Buger!</h1>
 
 
 <div class="burger-list">
@@ -31,5 +32,7 @@
     <input type="text" id="bg" name="name">
 
     <button type="submit">Submit</button>
+
+    <p>Click 'Submit' to add the new burger</p>
 
 </form>
